--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "beartler"
 version = "0.1.0"
+authors = ["Bear39 <bear.ruang@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.69"
+serenity = "0.11.5"
+tokio = "1.26.0"
